# starting-ragchatbot-codebase

./: .env.example  CLAUDE.md  QUALITY_SETUP.md  TEST_RESULTS.md  frontend-changes.md  pyproject.toml  pytest.ini
.github/workflows/: claude-code-review.yml  claude.yml
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  test_outline_tool.py  test_real_query.py  vector_store.py
backend/tests/: README.md  conftest.py
backend/tests/diagnostic/: test_failure_scenarios.py  test_system_health.py
backend/tests/integration/: test_api_endpoints.py  test_rag_system.py
backend/tests/test_data/: mock_responses.py  sample_course.txt
backend/tests/unit/: test_ai_generator.py  test_search_tools.py
docs/: query-flow-diagram.md  view-diagram.html
frontend/: index.html  script.js  style.css
scripts/: README.md  format.sh  lint-fix.sh  lint.sh  pre-commit.sh  quality.sh  typecheck.sh
